# meson

./: .appveyor.yml  .gitattributes  run_mypy.py  run_unittests.py
docs/markdown/: Reference-manual.md
mesonbuild/: build.py  coredata.py  environment.py  interpreter.py  interpreterbase.py  linkers.py  mconf.py  mesonlib.py  mesonmain.py  minstall.py  mtest.py  options.py
mesonbuild/backend/: backends.py  ninjabackend.py  vs2010backend.py
mesonbuild/compilers/: c.py  compilers.py  cpp.py  detect.py  fortran.py
mesonbuild/compilers/mixins/: clang.py  clike.py  emscripten.py  visualstudio.py
mesonbuild/dependencies/: base.py  detect.py  dev.py  misc.py  pkgconfig.py  python.py
mesonbuild/interpreter/: interpreter.py  interpreterobjects.py
mesonbuild/interpreterbase/: baseobjects.py  interpreterbase.py
mesonbuild/linkers/: detect.py  linkers.py
mesonbuild/modules/: __init__.py  gnome.py  python.py
mesonbuild/scripts/: meson_install.py  python_info.py
mesonbuild/utils/: core.py  universal.py
test cases/common/1 trivial/: meson.build
test cases/frameworks/7 gnome/: meson.build
test cases/python/1 extmodule/ext/py2/: meson.build
test cases/unit/17 static in static/: main.c  meson.build
test cases/unit/17 static in static/libdir/: ego.c  ego.h  meson.build
test cases/unit/17 static in static/libdir/lib0/: iam.c  iam.h  meson.build
test cases/unit/17 static in static/libdir/lib1/: meson.build  thebest.c  thebest.h
test cases/unit/46 testsetup default/: envcheck.py  meson.build
unittests/: allplatformstests.py
(+1 files in other folders)
